--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,10 +3,12 @@
     package="com.example.pizza"
     android:versionCode="1"
     android:versionName="1.0" >
-
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
     <uses-sdk
         android:minSdkVersion="8"
         android:targetSdkVersion="21" />
+
 
     <application
         android:allowBackup="true"
